--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ assets/libs/
 node_modules/
 vendor
 .idea
+assets/img/structure_of_polarized_vortices.gif
+assets/video/structure_of_polarized_vortices.mp4
