--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Under Construction # the website title (if blank, full name will be used instead)
+title: Chunde Huang # the website title (if blank, full name will be used instead)
 first_name: Chunde
 middle_name: 
 last_name: Huang
